--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "3rdparty/bav"]
+[submodule "bav"]
 	path = 3rdparty/bav
-	url = https://github.com/bav-php/bav.git
+	url = https://github.com/rotdrop/bav-occonf.git
+	branch = occonf
